[package]
name = "timelock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
streamflow-timelock = { git = "https://github.com/StreamFlow-Finance/timelock-crate", branch = "ibrica/recurring", features = ["no-entrypoint"] }
# streamflow-timelock = "0.3.0"

