[package]
name = "timelock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
streamflow-timelock = { git = "https://github.com/StreamFlow-Finance/timelock-crate", branch = "dev", features = ["no-entrypoint"] }
# streamflow-timelock = "0.3.0"

