[package]
name = "timelock"
version = "0.2.0"
description = "Token Vesting program for Solana."
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
streamflow-timelock = "0.3.2"
solana-security-txt = "1.0.1"
